# php-secret-scanner-llm-gemini

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml
docs/: testes.md
examples/: config_example.php  safe_example.php  vulnerable_example.php
src/php_secret_scanner_llm/: __init__.py  cli.py  llm.py  report.py  scanner.py
src/php_secret_scanner_llm/assets/: __init__.py  report.css
tests/: test_scanner.py
