[project]
name = "php-secret-scanner-llm"
version = "0.1.0"
description = "Ferramenta CLI para detecção de possíveis segredos expostos em arquivos PHP com apoio de LLM."
readme = "README.md"
authors = [
    { name = "adrianogomes", email = "124310443+adrianogomes@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typer>=0.26.8",
    "openai",
]

[project.scripts]
php-secret-scan = "php_secret_scanner_llm.cli:app"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]